# POC_Final

./: POC.ipynb  pyproject.toml  readme.md
