[tool.poetry]
name = "POC"
version = "0.1.0"
description = ""
authors = ["Aditya", "vaditya06@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
langchain = "^0.1.20"
torch = "^2.3.0"
sentence-transformers = "^2.7.0"
pydantic = "^2.7.1"
timm = "^1.0.3"
streamlit = "^1.34.0"
neo4j = "^5.20.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
